# cookiecutter-python

./: .editorconfig  .gitignore  LICENSE  README.md  cookiecutter.json
base/: cookiecutter.json
base/hooks/: post_gen_project.py
base/{{ cookiecutter.project_slug }}/: .editorconfig  .pre-commit-config.yaml  pyproject.toml  ruff.toml
base/{{ cookiecutter.project_slug }}/scripts/: lint.sh
base/{{ cookiecutter.repo_name }}/: .gitignore  pyproject.toml  pyrightconfig.json  ruff.toml
base/{{ cookiecutter.repo_name }}/scripts/: lint.sh  mypy.sh
drf/: cookiecutter.json
drf/hooks/: post_gen_project.py
drf/{{ cookiecutter.project_path }}/: .coveragerc  .dockerignore  .env.TEMPLATE  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/: gunicorn.conf.py
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/accounts/: admin.py  urls.py
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/accounts/factories/: user.py
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/accounts/serializers/: authentication_serializer.py
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/accounts/tests/views/: test_logout_view.py
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/accounts/views/: detail_view.py  google_login_view.py  logout_view.py
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/chat/: routing.py
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/config/: asgi.py  routing.py  urls.py  wsgi.py
drf/{{ cookiecutter.project_path }}/{{ cookiecutter.project_slug }}/config/settings/: base.py  dev.py  production.py  test.py
drf/{{ cookiecutter.repo_name }}/: .coveragerc  .env.TEMPLATE  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pyrightconfig.json  tox.ini
drf/{{ cookiecutter.repo_name }}/scripts/: manage.sh
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/: conftest.py  pytest.ini
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/accounts/models/: user.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/accounts/serializers/: authentication_serializer.py  user_serializer.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/accounts/tests/views/: test_logout_view.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/accounts/views/: detail_view.py  google_login_view.py  logout_view.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/chat/: consumers.py  messages.py  routing.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/config/: asgi.py  routing.py  urls.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/config/settings/: base.py  dev.py  production.py  test.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/core/tests/views/: test_spectacular_no_error.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/core/views/: spectacular_no_error.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/status/: views.py
drf/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/test_utils/: auth_api_test_case.py  factory.py
drf_package/: cookiecutter.json
drf_package/hooks/: post_gen_project.py
drf_package/{{ cookiecutter.repo_name }}/: .env.test  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml  tox.ini
drf_package/{{ cookiecutter.repo_name }}/docs/: conf.py  contributing.rst  index.rst
drf_package/{{ cookiecutter.repo_name }}/sandbox/accounts/models/: user.py
drf_package/{{ cookiecutter.repo_name }}/sandbox/config/: asgi.py  routing.py  urls.py
drf_package/{{ cookiecutter.repo_name }}/sandbox/config/settings/: dev.py  test.py
drf_package/{{ cookiecutter.repo_name }}/sandbox/test_myapp/: test_views.py
drf_package/{{ cookiecutter.repo_name }}/sandbox/test_utils/: factory.py
drf_package/{{ cookiecutter.repo_name }}/scripts/: mypy.sh
drf_package/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/myapp/: urls.py  views.py
hooks/: pre_prompt.py
py/: cookiecutter.json
py/{{ cookiecutter.repo_name }}/: pyrightconfig.json
py/{{ cookiecutter.repo_name }}/scripts/: lint.sh
pypackage/: cookiecutter.json
pypackage/hooks/: post_gen_project.py
pypackage/{{ cookiecutter.project_slug }}/: CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
pypackage/{{ cookiecutter.project_slug }}/.github/workflows/: test.yml
pypackage/{{ cookiecutter.project_slug }}/docs/: conf.py
pypackage/{{ cookiecutter.repo_name }}/: CONTRIBUTING.md  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  tox.ini
pypackage/{{ cookiecutter.repo_name }}/docs/: conf.py  index.rst  introduction.rst
pypackage/{{ cookiecutter.repo_name }}/tests/: test_dummy.py
pypackage/{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/: dummy.py
